--- a/config-view/tap-values-full.yml
+++ b/config-view/tap-values-full.yml
@@ -57,7 +57,7 @@ tap_gui:
       baseUrl: #@ "https://{}".format(data.values.tap.domains.tapGui)
       reading:
         allow:
-          - host: swagger.io
+          - host: '*.swagger.io'
           - host: '*.tap.tanzu4u.net'
       cors:
         origin: #@ "https://{}".format(data.values.tap.domains.tapGui)
